static/css/app.css
html,body { 
	height: 100%; 
	margin: 0px; 
	padding: 0px; 
}
.glimpse-container {
	width: 100%;
	height: 860px;
	overflow: auto;
	cursor: -webkit-grab;
    cursor: -moz-grab;
    cursor: -o-grab;
    cursor: grab;
}

.navbar {
	border-radius: 0px;
}
.container-full {
  	margin: 0 auto;
	width: 100%;
	height: 100%;

	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;	
}

.main {
	width: 100%;
	height: 100%;
}

.sqlv-table {
	font-family: 'Open Sans', sans-serif;
	overflow: hidden;
	border: 1px solid #7f8c8d;
	border-radius: 5px;
	margin: 0;
	padding: 0;
	background-color: #ecf0f1;
}
.sqlv-table li {
	padding: 1px;
}

.sqlv-tableHeader {
	text-align: center;
	font-weight: bold;
}

.sqlv-table ul {
	padding: 0;
	margin: 0;
	list-style: none;
}

.sqlv-table td {
	padding: 5px;
}

.sqlv-table th {
	text-align: center;
	background-color: #1abc9c;
}

.sqlv-canvasText {
	font-family: 'Open Sans', sans-serif;
	font-size: 20px;	
	color: #34495e;
}

.svg-link {
	stroke: #c0392b;
}

.svg-link:hover {
	stroke: black;
}

